# test-coverage-python-demo

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
coverage_demo/scripts/: demo.py
tests/: test_asserts.py
