[tool.poetry]
name = "test-coverage-demo-python"
version = "0.1.0"
description = ""
authors = ["Abdu <abdujabbar.mirkhalikov@gmail.com>"]

packages = [
  { include = "coverage_demo" },
]

[tool.poetry.dependencies]
python = ">=3.7"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
coverage_demo="coverage_demo.scripts.demo:main"
